[package]
name = "rs-gc-ho-allocation-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.13", features = ["derive"] }
cli-table = "0.4"
histogram = "*"
lazy_static = "1.4.0"
regex = "1"
